--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
